add golangci and stat
