# internal/web/stats/api.gen.go
@@ -1,0 +1,175 @@
+// Package stats provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
+package stats
+
+import (
+	"context"
+	"encoding/json"
+	"fmt"
+	"net/http"
+
+	"github.com/labstack/echo/v4"
+	strictecho "github.com/oapi-codegen/runtime/strictmiddleware/echo"
+)
+
+// Defines values for ErrorResponseErrorCode.
+const (
+	NOCANDIDATE ErrorResponseErrorCode = "NO_CANDIDATE"
+	NOTASSIGNED ErrorResponseErrorCode = "NOT_ASSIGNED"
+	NOTFOUND    ErrorResponseErrorCode = "NOT_FOUND"
+	PREXISTS    ErrorResponseErrorCode = "PR_EXISTS"
+	PRMERGED    ErrorResponseErrorCode = "PR_MERGED"
+	TEAMEXISTS  ErrorResponseErrorCode = "TEAM_EXISTS"
+)
+
+// AssignmentsByPRItem defines model for AssignmentsByPRItem.
+type AssignmentsByPRItem struct {
+	Count         int    `json:"count"`
+	PullRequestId string `json:"pull_request_id"`
+}
+
+// AssignmentsByUserItem defines model for AssignmentsByUserItem.
+type AssignmentsByUserItem struct {
+	Count  int    `json:"count"`
+	UserId string `json:"user_id"`
+}
+
+// ErrorResponse defines model for ErrorResponse.
+type ErrorResponse struct {
+	Error struct {
+		Code    ErrorResponseErrorCode `json:"code"`
+		Message string                 `json:"message"`
+	} `json:"error"`
+}
+
+// ErrorResponseErrorCode defines model for ErrorResponse.Error.Code.
+type ErrorResponseErrorCode string
+
+// StatsResponse defines model for StatsResponse.
+type StatsResponse struct {
+	AssignmentsByPr   []AssignmentsByPRItem   `json:"assignments_by_pr"`
+	AssignmentsByUser []AssignmentsByUserItem `json:"assignments_by_user"`
+	MergedPrsCount    int                     `json:"merged_prs_count"`
+	OpenPrsCount      int                     `json:"open_prs_count"`
+}
+
+// ServerInterface represents all server handlers.
+type ServerInterface interface {
+	// Get statistics about pull requests and assignments
+	// (GET /stats)
+	GetStats(ctx echo.Context) error
+}
+
+// ServerInterfaceWrapper converts echo contexts to parameters.
+type ServerInterfaceWrapper struct {
+	Handler ServerInterface
+}
+
+// GetStats converts echo context to params.
+func (w *ServerInterfaceWrapper) GetStats(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetStats(ctx)
+	return err
+}
+
+// This is a simple interface which specifies echo.Route addition functions which
+// are present on both echo.Echo and echo.Group, since we want to allow using
+// either of them for path registration
+type EchoRouter interface {
+	CONNECT(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	DELETE(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	GET(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	HEAD(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	OPTIONS(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	PATCH(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	POST(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	PUT(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	TRACE(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+}
+
+// RegisterHandlers adds each server route to the EchoRouter.
+func RegisterHandlers(router EchoRouter, si ServerInterface) {
+	RegisterHandlersWithBaseURL(router, si, "")
+}
+
+// Registers handlers, and prepends BaseURL to the paths, so that the paths
+// can be served under a prefix.
+func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL string) {
+
+	wrapper := ServerInterfaceWrapper{
+		Handler: si,
+	}
+
+	router.GET(baseURL+"/stats", wrapper.GetStats)
+
+}
+
+type GetStatsRequestObject struct {
+}
+
+type GetStatsResponseObject interface {
+	VisitGetStatsResponse(w http.ResponseWriter) error
+}
+
+type GetStats200JSONResponse StatsResponse
+
+func (response GetStats200JSONResponse) VisitGetStatsResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type GetStats500JSONResponse ErrorResponse
+
+func (response GetStats500JSONResponse) VisitGetStatsResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(500)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+// StrictServerInterface represents all server handlers.
+type StrictServerInterface interface {
+	// Get statistics about pull requests and assignments
+	// (GET /stats)
+	GetStats(ctx context.Context, request GetStatsRequestObject) (GetStatsResponseObject, error)
+}
+
+type StrictHandlerFunc = strictecho.StrictEchoHandlerFunc
+type StrictMiddlewareFunc = strictecho.StrictEchoMiddlewareFunc
+
+func NewStrictHandler(ssi StrictServerInterface, middlewares []StrictMiddlewareFunc) ServerInterface {
+	return &strictHandler{ssi: ssi, middlewares: middlewares}
+}
+
+type strictHandler struct {
+	ssi         StrictServerInterface
+	middlewares []StrictMiddlewareFunc
+}
+
+// GetStats operation middleware
+func (sh *strictHandler) GetStats(ctx echo.Context) error {
+	var request GetStatsRequestObject
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.GetStats(ctx.Request().Context(), request.(GetStatsRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GetStats")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(GetStatsResponseObject); ok {
+		return validResponse.VisitGetStatsResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
